# rbb

./: .gitignore  CONSTITUICAO_VIVA.md  HONESTY.md  MAIN_ENTRYPOINT.py  Makefile  README.md  README_epistemic_ontology.md  alveo_u280.xdc  benchmark_fsi.py  bio_digital_governance_bridge_1046_4.py  bio_digital_mesh_1046_6.py  bio_digital_oracle_1046_5.py  bio_digital_singularity_1046_7.py  cathedral_arkhe_integration_1091_1.py  cathedral_arkhe_quantum_report.md  cathedral_arkhe_v12_1_2_agi.py  cathedral_arkhe_v16.3_zvec_meta_rust.py  cathedral_arkhe_v16_embodied_final.py  cathedral_btfs_bridge.py  cathedral_installer_v3.1.0.sh  cathedral_integration_full.py  cathedral_openai_gateway.py  cathedral_qubes_integration_1101.py  cellular_checkpoint_fpga_synth_1046.3.1.tcl  classification_enforcement.py  crispr_self_modify_1046_2.py  discourse_analysis_report.json  discourse_detector_cientifico.py  dkes_gram_crispr_1046_2_1.py  dna_merkle_rbb_bridge_1046_1_1.py  dna_storage_cathedral_1046_1.py  docker-compose.yml  dynamic_system_identification_engine_1089.py  episteme.json  episteme.lean  episteme_expanded.json  episteme_full.json  expand_ontology.py  generate_zk_proof.py  hamiltonian_temporal_implosion_1053_1.py  (+51 more)
cathedral-agi-omega/: MAIN_ENTRYPOINT.py  README.md  pyproject.toml
cathedral-agi-omega/AUTO_RSI/: architecture_search.py  code_synthesis_agent.py  safe_extraction_pipeline.py
cathedral-agi-omega/CATHEDRAL_OS/: task_scheduler.py
cathedral-agi-omega/GLOBAL_DISTRIBUTED_TRAINING/: fsdp_coordinator.py  mpc_gradient_aggregator.py
cathedral-agi-omega/HUMAN_INTERFACE/: governance_dashboard.py  threshold_mobile_app.py
cathedral-agi-omega/INFRASTRUCTURE/ci_cd/: github_actions_prove.yml  reject_unproven.py
cathedral-agi-omega/LEAN4_SUPEREGO/: CathedralAGI.lean
cathedral-agi-omega/MULTIMODAL_ENCODERS/: audio_handler.py  vision_to_ontology.py
cathedral-agi-omega/NEURO_SYMBOLIC_ENGINE/: episodic_memory.py  neuro_symbolic_bridge.py
cathedral-agi-omega/SOVEREIGN_ECONOMICS/: pouw_verifier.py  token_minter.py
cathedral-agi-omega/TOOL_USE_SANDBOX/: api_oblivious_transfer.py
cathedral-arkhe/substrates/2140.7-temporal-firewall/: Cargo.toml
cathedral-arkhe/substrates/2140.7-temporal-firewall/src/: lib.rs
cathedral-arkhe/substrates/989.y-wormgraph/: Cargo.toml
cathedral-arkhe/substrates/989.y-wormgraph/benches/: wormgraph_bench.rs
(+291 files in other folders)
