[tool.poetry]
name = "cathedral-agi-omega"
version = "11.5.0"
description = "Cathedral AGI: Formal Verification meets Distributed Cognition"
authors = ["Cathedral Architect <0009-0005-2697-4668>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blst-py = "^0.3.0"
substrate-interface = "^1.7.0"
py_ecc = "^8.0.0"
web3 = "^6.0.0"
neo4j = "^5.0.0"
torch = "^2.0.0"
ezkl = "^0.0.0"
prometheus-client = "^0.17.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
